--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "AurityProject",
+  "name": "aurity-code-challenge",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.5.0",
     "jest-expo": "^21.0.2",
+    "react-native-scripts": "1.5.0",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,7 +20,10 @@
   },
   "dependencies": {
     "expo": "^21.0.0",
+    "graphql-tag": "1.3.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.48.4"
+    "react-apollo": "^2.0.0",
+    "react-native": "^0.48.4",
+    "react-navigation": "^1.0.0-beta.15"
   }
 }
