--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.0.0",
+    "apollo-client": "^2.0.1",
+    "apollo-link-http": "^1.0.0",
     "expo": "^21.0.0",
-    "graphql-tag": "1.3.1",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
     "react": "16.0.0-alpha.12",
     "react-apollo": "^2.0.0",
     "react-native": "^0.48.4",
