--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "16.0.0-alpha.12",
     "react-apollo": "^2.0.0",
     "react-native": "^0.48.4",
+    "react-native-elements": "^0.17.0",
     "react-navigation": "^1.0.0-beta.15"
   }
 }
