update app name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aurity-code-challenge",
+  "name": "react-native-github-graphql-app",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
